add js for headear

--- a/css/index.css
+++ b/css/index.css
@@ -148,6 +148,14 @@ body {
   }
 }
 
+.header__wrapper {
+  display: flex;
+}
+
+.header__nav {
+  display: none;
+}
+
 .header__burger {
   padding: 5px;
 }
