chage structure from js to html

--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -6,6 +6,10 @@ body {
   font-family: $main-font;
   color: $text-color;
   background-color: $background-color-page;
+
+  &.dark {
+    background-color: $dark-color;
+  }
 }
 
 .container {
