--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -8,3 +8,11 @@ $accent-color: #F53838;
 $dark-color: #0B132A;
 $white-color: #ffffff;
 $grey-color: #AFB5C0;
+
+// breakpoints
+$breakpoint-sm: 575px;
+$breakpoint-md: 767px;
+$breakpoint-lg: 991px;
+
+// time
+$animation-duration: 0.4s;
