--- a/css/index.css
+++ b/css/index.css
@@ -115,6 +115,9 @@ body {
   color: #4F5665;
   background-color: #F6F6F6;
 }
+body.dark {
+  background-color: #0B132A;
+}
 
 .container {
   width: 100%;
@@ -124,38 +127,145 @@ body {
   padding: 0 15px;
 }
 
-.logo__img {
+@media (min-width: 575px) {
+  .autorization {
+    display: flex;
+    gap: 10px;
+  }
+}
+.autorization__link {
+  font-size: clamp(12px, 1.4vw, 16px);
+  color: #0B132A;
+  font-weight: 700;
+  outline-width: 1px;
+  outline-style: solid;
+  border-radius: 50px;
+  padding: 5px 20px;
+}
+.autorization__link_sign-in {
+  outline-color: #0B132A;
+  transition: color 0.4s, outline-color 0.4s;
+}
+@media (hover: hover) {
+  .autorization__link_sign-in:hover {
+    color: #F53838;
+    outline-color: #F53838;
+  }
+}
+@media (min-width: 575px) {
+  .autorization__link_sign-in {
+    outline: none;
+  }
+}
+.autorization__link_sign-up {
+  display: none;
+  color: #F53838;
+  transition: color 0.4s, background-color 0.4s;
+}
+@media (min-width: 575px) {
+  .autorization__link_sign-up {
+    display: inline-block;
+  }
+}
+@media (hover: hover) {
+  .autorization__link_sign-up:hover {
+    background-color: #F53838;
+    color: #ffffff;
+  }
+}
+
+.header {
+  padding: 25px 0;
+  position: relative;
+  z-index: 5px;
+}
+.header__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header__logo {
   width: 100px;
 }
-@media (min-width: 576px) {
-  .logo__img {
-    width: 110px;
-  }
-}
-@media (min-width: 768px) {
-  .logo__img {
-    width: 120px;
-  }
-}
-@media (min-width: 992px) {
-  .logo__img {
-    width: 130px;
-  }
-}
-@media (min-width: 1140px) {
-  .logo__img {
+@media (min-width: 767px) {
+  .header__logo {
     width: 148px;
   }
 }
-
-.header__wrapper {
-  display: flex;
-}
-
 .header__nav {
-  display: none;
+  width: 100%;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 80px;
+  right: 0;
+  left: 0;
+  z-index: 10;
+  transform: translateX(-100%);
 }
-
+.header__nav.active {
+  transform: translateX(0);
+}
+@media (min-width: 991px) {
+  .header__nav {
+    width: auto;
+    position: static;
+    transform: translateX(0);
+    flex-direction: row;
+    gap: 40px;
+    background-color: inherit;
+  }
+}
+.header__nav-link {
+  width: 100%;
+  padding: 30px 0;
+  text-align: center;
+  border-bottom: 1px solid #F53838;
+  color: #4F5665;
+}
+@media (min-width: 991px) {
+  .header__nav-link {
+    width: auto;
+    padding: 0;
+    border-bottom: none;
+    position: relative;
+    transition: width 0.4s;
+  }
+  .header__nav-link::after {
+    content: "";
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    translate: -50%;
+    width: 0;
+    height: 1px;
+    background-color: #F53838;
+    transition-duration: inherit;
+  }
+  .header__nav-link:hover::after {
+    width: 100%;
+  }
+}
+.header__buttons {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.header__theme-svg {
+  fill: #4F5665;
+  transition: fill 0.4s;
+}
+.header__theme-svg.dark {
+  fill: #F53838;
+}
+@media (hover: hover) {
+  .header__theme-svg:hover {
+    fill: #F53838;
+  }
+}
 .header__burger {
   padding: 5px;
 }
@@ -179,6 +289,15 @@ body {
 }
 .header__burger.active span:nth-child(3) {
   transform: rotate(45deg) translateY(-6px);
+}
+@media (min-width: 991px) {
+  .header__burger {
+    display: none;
+  }
+}
+
+.hero {
+  padding: 25px 0;
 }
 
 /*# sourceMappingURL=index.css.map */
