--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -16,6 +16,6 @@ body {
   width: 100%;
   height: 100%;
   max-width: 1140px;
-  margin: 0 auto;
-  padding: 0 15px;
+  margin-inline: auto;
+  padding-inline: 15px;
 }
