--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -11,3 +11,20 @@
 @mixin section-padding {
   padding: 25px 0;
 }
+
+@mixin accent-link {
+  width: 200px;
+  height: 50px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: $accent-color;
+  color: $white-color;
+  border-radius: 10px;
+
+  @media (min-width: $breakpoint-md) {
+    width: 250px;
+    height: 60px;
+  }
+}
