--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -3,8 +3,10 @@ $main-font: 'Rubik', sans-serif;
 
 // colors
 $background-color-page: #F6F6F6;
+$background-color-icon: #FFECEC;
 $text-color: #4F5665;
 $accent-color: #F53838;
+$line-color: #EEEFF2;
 $dark-color: #0B132A;
 $white-color: #ffffff;
 $grey-color: #AFB5C0;
