--- a/css/index.css
+++ b/css/index.css
@@ -121,7 +121,9 @@ body.dark {
 body.dark h1,
 body.dark h2,
 body.dark h3,
-body.dark p {
+body.dark p,
+body.dark a,
+body.dark li {
   color: #ffffff;
 }
 
@@ -187,6 +189,16 @@ body.dark p {
   padding: 25px 0;
   position: relative;
   z-index: 5px;
+}
+@media (min-width: 767px) {
+  .header {
+    padding: 35px 0;
+  }
+}
+@media (min-width: 991px) {
+  .header {
+    padding: 50px 0;
+  }
 }
 .header__wrapper {
   display: flex;
@@ -329,6 +341,16 @@ body.dark p {
 .hero {
   padding: 25px 0;
 }
+@media (min-width: 767px) {
+  .hero {
+    padding: 35px 0;
+  }
+}
+@media (min-width: 991px) {
+  .hero {
+    padding: 50px 0;
+  }
+}
 .hero__wrapper {
   display: flex;
   flex-direction: column;
@@ -354,6 +376,11 @@ body.dark p {
 }
 .hero__title.dark {
   color: #ffffff;
+}
+@media (min-width: 991px) {
+  .hero__title {
+    margin-bottom: 20px;
+  }
 }
 .hero__desc {
   max-width: 555px;
@@ -389,6 +416,154 @@ body.dark p {
     width: 100%;
     height: 100%;
   }
+}
+
+.stat {
+  padding: 25px 0;
+}
+@media (min-width: 767px) {
+  .stat {
+    padding: 35px 0;
+  }
+}
+@media (min-width: 991px) {
+  .stat {
+    padding: 50px 0;
+  }
+}
+.stat__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  background-color: #ffffff;
+  padding: 25px 0;
+}
+@media (min-width: 767px) {
+  .stat__wrapper {
+    padding: 35px 0;
+  }
+}
+@media (min-width: 991px) {
+  .stat__wrapper {
+    padding: 50px 0;
+  }
+}
+@media (min-width: 575px) {
+  .stat__wrapper {
+    gap: 20px;
+  }
+}
+@media (min-width: 767px) {
+  .stat__wrapper {
+    flex-direction: row;
+    border-radius: 10px;
+  }
+}
+.stat__item {
+  width: 145px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+@media (min-width: 575px) {
+  .stat__item {
+    gap: 20px;
+  }
+}
+@media (min-width: 767px) {
+  .stat__item {
+    width: 33.3%;
+    justify-content: center;
+  }
+  .stat__item:not(:last-child) {
+    border-right: 1px solid #EEEFF2;
+  }
+}
+.stat__item-icon {
+  width: 55px;
+  height: 55px;
+  flex-shrink: 0;
+  background-color: #FFECEC;
+  border-radius: 50%;
+  position: relative;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.stat__item-icon_user {
+  background-image: url("../../images/icons/user.svg");
+}
+.stat__item-icon_loc {
+  background-image: url("../../images/icons/loc.svg");
+}
+.stat__item-icon_servers {
+  background-image: url("../../images/icons/server.svg");
+}
+.stat__num {
+  color: #0B132A;
+  font-weight: 700;
+  font-size: clamp(20px, 2.2vw, 25px);
+}
+.stat__name {
+  font-size: clamp(16px, 1.8vw, 20px);
+}
+
+.features {
+  padding: 25px 0;
+}
+@media (min-width: 767px) {
+  .features {
+    padding: 35px 0;
+  }
+}
+@media (min-width: 991px) {
+  .features {
+    padding: 50px 0;
+  }
+}
+.features__wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+@media (min-width: 767px) {
+  .features__wrapper {
+    flex-direction: row;
+    align-items: center;
+    gap: 100px;
+  }
+}
+@media (min-width: 767px) {
+  .features__info {
+    max-width: 428px;
+  }
+}
+.features__title {
+  font-size: clamp(20px, 3vw, 35px);
+  font-weight: 500;
+  color: #0B132A;
+  margin-bottom: 10px;
+}
+@media (min-width: 991px) {
+  .features__title {
+    margin-bottom: 20px;
+  }
+}
+.features__desc {
+  font-size: clamp(12px, 1.4vw, 16px);
+  margin-bottom: 20px;
+}
+.features__list-item {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+}
+.features__list-item::before {
+  content: url("../../images/icons/check-circle.svg");
+  margin-right: 10px;
+}
+.features__list-item:not(:last-child) {
+  margin-bottom: 15px;
 }
 
 /*# sourceMappingURL=index.css.map */
