add css for price and network sections

--- a/css/index.css
+++ b/css/index.css
@@ -566,4 +566,187 @@ body.dark li {
   margin-bottom: 15px;
 }
 
+.price {
+  padding: 25px 0;
+}
+@media (min-width: 767px) {
+  .price {
+    padding: 35px 0;
+  }
+}
+@media (min-width: 991px) {
+  .price {
+    padding: 50px 0;
+  }
+}
+.price__title {
+  font-size: clamp(20px, 3vw, 35px);
+  font-weight: 500;
+  color: #0B132A;
+  margin-bottom: 10px;
+}
+@media (min-width: 767px) {
+  .price__title {
+    text-align: center;
+  }
+}
+@media (min-width: 991px) {
+  .price__title {
+    margin-bottom: 20px;
+  }
+}
+.price__desc {
+  font-size: clamp(12px, 1.4vw, 16px);
+  max-width: 555px;
+  margin-bottom: 40px;
+}
+@media (min-width: 767px) {
+  .price__desc {
+    margin-inline: auto;
+    text-align: center;
+  }
+}
+@media (min-width: 991px) {
+  .price__desc {
+    margin-bottom: 60px;
+  }
+}
+.price__cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+@media (min-width: 767px) {
+  .price__cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: center;
+    gap: 30px;
+  }
+}
+@media (min-width: 991px) {
+  .price__cards {
+    gap: 50px;
+  }
+}
+.price__card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-width: 330px;
+  padding: 50px 70px;
+  outline: 1px solid #DDDDDD;
+  border-radius: 10px;
+  transition: outline-color 0.4s;
+}
+@media (hover: hover) {
+  .price__card:hover {
+    outline-width: 2px;
+    outline-color: #F53838;
+  }
+}
+.price__card-top {
+  text-align: center;
+  margin-bottom: 50px;
+}
+.price__card-img {
+  margin-bottom: 20px;
+}
+@media (min-width: 767px) {
+  .price__card-img {
+    margin-bottom: 30px;
+  }
+}
+.price__card-title {
+  font-size: clamp(14px, 1.6vw, 18px);
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 20px;
+}
+@media (min-width: 767px) {
+  .price__card-title {
+    margin-bottom: 30px;
+  }
+}
+.price__card-list-item {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+}
+@media (min-width: 575px) {
+  .price__card-list-item {
+    font-size: 14px;
+  }
+}
+.price__card-list-item::before {
+  content: url("../../images/icons/check.svg");
+  margin-right: 15px;
+}
+.price__card-list-item:not(:last-child) {
+  margin-bottom: 10px;
+}
+.network {
+  padding: 25px 0;
+}
+@media (min-width: 767px) {
+  .network {
+    padding: 35px 0;
+  }
+}
+@media (min-width: 991px) {
+  .network {
+    padding: 50px 0;
+  }
+}
+.network__title {
+  font-size: clamp(20px, 3vw, 35px);
+  font-weight: 500;
+  color: #0B132A;
+  margin-bottom: 10px;
+}
+@media (min-width: 767px) {
+  .network__title {
+    text-align: center;
+  }
+}
+@media (min-width: 991px) {
+  .network__title {
+    margin-bottom: 20px;
+  }
+}
+.network__desc {
+  font-size: clamp(12px, 1.4vw, 16px);
+  max-width: 555px;
+  margin-bottom: 40px;
+}
+@media (min-width: 767px) {
+  .network__desc {
+    margin-inline: auto;
+    text-align: center;
+  }
+}
+@media (min-width: 991px) {
+  .network__desc {
+    margin-bottom: 60px;
+  }
+}
+.network__map {
+  margin-bottom: 35px;
+}
+.network__sponsors {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+@media (min-width: 575px) {
+  .network__sponsors {
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+}
+
 /*# sourceMappingURL=index.css.map */
