--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -7,6 +7,7 @@ $background-color-icon: #FFECEC;
 $text-color: #4F5665;
 $accent-color: #F53838;
 $line-color: #EEEFF2;
+$border-color: #DDDDDD;
 $dark-color: #0B132A;
 $white-color: #ffffff;
 $grey-color: #AFB5C0;
